k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vatbe
  namespace: vatbe
spec:
  selector:
    app: vatbe
  ports:
    - port: 80
      targetPort: 8080
